--- a/theme/src/layout/layout_vgrid.less
+++ b/theme/src/layout/layout_vgrid.less
@@ -89,7 +89,7 @@ html {
 
 //Main
 
-article,
+
 .region-main {
     #desinax-vgrid.column(@columns);
 }
@@ -106,6 +106,10 @@ article,
     max-width: 400px;
     margin: 10px;
     display: inline-block;
+}
+
+code {
+    line-height: 1;
 }
 
 /*  Sidebar layout */
@@ -147,7 +151,7 @@ article,
 
 .byline {
     #desinax-vgrid.column(6);
-    #desinax-vgrid.push(@offset: 1);
+    #desinax-vgrid.push(@offset: 2);
     min-width: 300px;
 }
 
